--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <meta charset="UTF-8">
+  <title>Il mio Blog</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<h1 class="titolo">Il mio Blog</h1>
+
+<div class="grid">
+
+  <a href="articolo1.html" class="card">
+    <img src="img/articolo1.jpg">
+    <h2>Titolo Articolo 1</h2>
+  </a>
+
+  <a href="articolo2.html" class="card">
+    <img src="img/articolo2.jpg">
+    <h2>Titolo Articolo 2</h2>
+  </a>
+
+  <a href="articolo3.html" class="card">
+    <img src="img/articolo3.jpg">
+    <h2>Titolo Articolo 3</h2>
+  </a>
+
+</div>
+
+</body>
+</html>
 
