--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<h1 class="titolo">Il mio Blog</h1>
+<h1 class="titolo">El blog de Tierra Compartida</h1>
 
 <div class="grid">
 
